--- a/index.html
+++ b/index.html
@@ -188,6 +188,6 @@
  
     </div>
     <script src="js/header.js"></script>
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
