--- a/index.html
+++ b/index.html
@@ -305,6 +305,6 @@
     </div>
     <script src="https://use.fontawesome.com/d342fa6a3d.js"></script>
     <script src="js/header.js"></script>
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
