--- a/profile.html
+++ b/profile.html
@@ -105,7 +105,7 @@
   crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/d342fa6a3d.js"></script>
     <script src="js/header.js"></script>
-    <script src="js/profile.js"></script>
+    <script src="profile.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
